--- a/_posts/events/2015-11-12-robonar-2.markdown
+++ b/_posts/events/2015-11-12-robonar-2.markdown
@@ -6,6 +6,6 @@ endtime: 12:00:00 -0500
 categories: events
 ---
 
-We will be discussing the importance of solid modeling, giving you guys some basic demonstrations with SolidWorks. If you have your laptop on you, feel free to bring it with you, we can show you how to remote desktop to use Solidworks on your computer!
-Also, if you're interested in 3D Printing, it is super important to get some knowhow on solid modeling.
-See you guys at 12PM in BA2185!
+This Robonar will be more of a hands-on Robonar, where you will get the opportunity to install SolidWorks on your computer and follow along with Andrew to get a guided tutorial to using SolidWorks. It might be daunting at first, but Andrew will demystify the challenges that come about with solid modelling!
+
+Hosted by Andrew Romano.
